# agentic-ai-bootcamp

./: .env.example  .gitignore  README.md  nuevas.txt  pyproject.toml  requirements-crewai.txt  requirements-limpio.txt
data/docs/: arquitectura_datos.txt
data/fcc/: clientes.json  cuentas.json  transacciones.json
dia1/: 01_primer_chain.py  02_chain_con_memoria.py  03_rag_basico.py
dia2/: 01_chroma_avanzado.py  02_qdrant_produccion.py  03_neo4j_graphrag.py
dia3/: 01_primer_grafo.py  02_agente_react.py  02_agente_react_10_10.py  02_agente_react_robusto.py  03_agente_react_forzado.py  03_human_in_the_loop.py
dia4/: 01_primera_crew.py  02_crew_con_tools.py  03_integracion_final.py  analisis_retail.md  informe_calidad.md
dia5/: 01_datos_sinteticos.py  02_grafo_neo4j.py  03_rag_regulatorio.py  04_agente_aml.py
dia6/: 01_scoring_fraude.py  02_crew_kyc.py  03_simulador_completo.py
