[project]
name = "agentic-ai-bootcamp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "chromadb>=1.1.1",
    "crewai[litellm]>=1.13.0",
    "httpx>=0.28.1",
    "jupyter>=1.1.1",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.12",
    "matplotlib>=3.10.8",
    "numpy>=2.2.6",
    "onnxruntime>=1.15,<1.24",
    "openai>=2.30.0",
    "pandas>=2.3.3",
    "pinecone-client>=6.0.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.17.1",
    "sentence-transformers>=5.3.0",
    "tiktoken>=0.12.0",
    "transformers>=5.5.0",
]
